fix image alignment

--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ body {
     background-image: url("peter-thomas-zasdv7_-Emg-unsplash.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
 
     padding-top: 10vh;
     padding-bottom: 5vh;
